--- a/dst/covid-19/index.html
+++ b/dst/covid-19/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Flatirons Recovery has stringent infectious disease screening for any potential client who wishes to admit to our program. See our screening questions.">
     <meta name="keywords" content="covid 19, infectious disease">
 
-	<script>window.AID='UA-';</script>
+	<script>window.AID='UA-178025796-1';</script>
 	<script src="/assets/analytic.min.js"></script>
 
     <script src="/assets/nav-bar.min.js" defer></script>
