--- a/dst/covid-19/index.html
+++ b/dst/covid-19/index.html
@@ -9,6 +9,13 @@
     <meta name="description" content="Flatirons Recovery has stringent infectious disease screening for any potential client who wishes to admit to our program. See our screening questions.">
     <meta name="keywords" content="covid 19, infectious disease">
 
+    <meta property="og:locale" content="en_US">
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:title" content="COVID-19 | Flatirons Recovery">
+	<meta property="og:description" content="Flatirons Recovery has stringent infectious disease screening for any potential client who wishes to admit to our program. See our screening questions.">
+	<meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
+
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
