--- a/src/covid-19/index.v.html
+++ b/src/covid-19/index.v.html
@@ -1,24 +1,25 @@
 <!-- {
-    "title": "COVID-19 | Flatirons Recovery",
+    "title": "Coronavirus (COVID-19) | Flatirons Recovery",
     "description": "Flatirons Recovery has stringent infectious disease screening for any potential client who wishes to admit to our program. See our screening questions.",
-    "keywords": "covid 19, infectious disease"
+    "keywords": "covid 19, infectious disease",
+    "ogImage": "/covid-19/covid.png"
 } -->
 
 <style>
     .main {
-        background-image: url('');
+        background-image: url('/covid-19/covid.png');
     }
 </style>
 
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>Flatirons COVID-19</h1>
         </div>
     </div>
 </div>
 
 <div class="wrap">
+    <h1>Coronavirus (COVID-19)</h1>
     <p>At Flatirons Recovery Center we have stringent infectious disease screening for any potential client who wishes to admit to our program.</p>
     <p><strong>Please see the following screening questions:</strong></p>
     <ul>
