--- a/dst/covid-19/index.html
+++ b/dst/covid-19/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>COVID-19 | Flatirons Recovery</title>
+    <title>Coronavirus (COVID-19) | Flatirons Recovery</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Flatirons Recovery Centers">
-	<meta property="og:title" content="COVID-19 | Flatirons Recovery">
+	<meta property="og:title" content="Coronavirus (COVID-19) | Flatirons Recovery">
 	<meta property="og:description" content="Flatirons Recovery has stringent infectious disease screening for any potential client who wishes to admit to our program. See our screening questions.">
-	<meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
+	<meta property="og:image" content="/covid-19/covid.png" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -114,19 +114,19 @@
 
 <style>
     .main {
-        background-image: url('');
+        background-image: url('/covid-19/covid.png');
     }
 </style>
 
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>Flatirons COVID-19</h1>
         </div>
     </div>
 </div>
 
 <div class="wrap">
+    <h1>Coronavirus (COVID-19)</h1>
     <p>At Flatirons Recovery Center we have stringent infectious disease screening for any potential client who wishes to admit to our program.</p>
     <p><strong>Please see the following screening questions:</strong></p>
     <ul>
