--- a/src/covid-19/index.v.html
+++ b/src/covid-19/index.v.html
@@ -20,7 +20,7 @@
 
 <div class="wrap">
     <h1>Coronavirus (COVID-19)</h1>
-    <p>At Flatirons Recovery Center we have stringent infectious disease screening for any potential client who wishes to admit to our program.</p>
+    <p>At Flatirons Recovery we have stringent infectious disease screening for any potential client who wishes to admit to our program.</p>
     <p><strong>Please see the following screening questions:</strong></p>
     <ul>
         <li>Have you been in direct contact with any person who has been identified as a confirmed case of COVID-19 or is currently on the CDC list as a Person Under Investigation for COVID-19?</li>
@@ -31,11 +31,11 @@
         <li>Fever?</li>
         <li>In the past 14 days have you traveled outside of the US to China, Iran, Japan, Europe, South Korea?</li>
         <li>In the past 14 days have you traveled to an area in the United States currently experiencing outbreaks of COVID-19, especially the states of Arizona, Texas, California, or Florida?</li>
-        <li>If you have answered yes to any of the above questions and/ or are experiencing these symptoms and they aren’t otherwise linked to withdrawals, Flatirons Recovery Center requires a confirmatory test for COVID 19 prior to entry into treatment.</li>
+        <li>If you have answered yes to any of the above questions and/ or are experiencing these symptoms and they aren’t otherwise linked to withdrawals, Flatirons Recovery requires a confirmatory test for COVID 19 prior to entry into treatment.</li>
     </ul>
 
-    <p>Additionally, if potential clients are accessing detoxification services prior to admission into Flatirons Recovery Center, we will work with those facilities to assist clients in accessing COVID-19 testing whether they are symptomatic, or not.</p>
-    <p>Once admitted into the care of Flatirons Recovery Center, all new clients will be asked to submit to COVID-19 swab testing at the time of admission, asked to wear a facemask, and will be educated on symptom identification and personal hygiene protocols followed within the facility.</p>
+    <p>Additionally, if potential clients are accessing detoxification services prior to admission into Flatirons Recovery, we will work with those facilities to assist clients in accessing COVID-19 testing whether they are symptomatic, or not.</p>
+    <p>Once admitted into the care of Flatirons Recovery, all new clients will be asked to submit to COVID-19 swab testing at the time of admission, asked to wear a facemask, and will be educated on symptom identification and personal hygiene protocols followed within the facility.</p>
 
     <p><strong>PHP/IOP/OP Office Protocols:</strong></p>
     <ul>
