--- a/dst/covid-19/index.html
+++ b/dst/covid-19/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="Coronavirus (COVID-19) | Flatirons Recovery">
 	<meta property="og:description" content="Flatirons Recovery has stringent infectious disease screening for any potential client who wishes to admit to our program. See our screening questions.">
 	<meta property="og:image" content="/covid-19/covid.png" />
@@ -145,7 +145,7 @@
 
 <div class="wrap">
     <h1>Coronavirus (COVID-19)</h1>
-    <p>At Flatirons Recovery Center we have stringent infectious disease screening for any potential client who wishes to admit to our program.</p>
+    <p>At Flatirons Recovery we have stringent infectious disease screening for any potential client who wishes to admit to our program.</p>
     <p><strong>Please see the following screening questions:</strong></p>
     <ul>
         <li>Have you been in direct contact with any person who has been identified as a confirmed case of COVID-19 or is currently on the CDC list as a Person Under Investigation for COVID-19?</li>
@@ -156,11 +156,11 @@
         <li>Fever?</li>
         <li>In the past 14 days have you traveled outside of the US to China, Iran, Japan, Europe, South Korea?</li>
         <li>In the past 14 days have you traveled to an area in the United States currently experiencing outbreaks of COVID-19, especially the states of Arizona, Texas, California, or Florida?</li>
-        <li>If you have answered yes to any of the above questions and/ or are experiencing these symptoms and they aren’t otherwise linked to withdrawals, Flatirons Recovery Center requires a confirmatory test for COVID 19 prior to entry into treatment.</li>
+        <li>If you have answered yes to any of the above questions and/ or are experiencing these symptoms and they aren’t otherwise linked to withdrawals, Flatirons Recovery requires a confirmatory test for COVID 19 prior to entry into treatment.</li>
     </ul>
 
-    <p>Additionally, if potential clients are accessing detoxification services prior to admission into Flatirons Recovery Center, we will work with those facilities to assist clients in accessing COVID-19 testing whether they are symptomatic, or not.</p>
-    <p>Once admitted into the care of Flatirons Recovery Center, all new clients will be asked to submit to COVID-19 swab testing at the time of admission, asked to wear a facemask, and will be educated on symptom identification and personal hygiene protocols followed within the facility.</p>
+    <p>Additionally, if potential clients are accessing detoxification services prior to admission into Flatirons Recovery, we will work with those facilities to assist clients in accessing COVID-19 testing whether they are symptomatic, or not.</p>
+    <p>Once admitted into the care of Flatirons Recovery, all new clients will be asked to submit to COVID-19 swab testing at the time of admission, asked to wear a facemask, and will be educated on symptom identification and personal hygiene protocols followed within the facility.</p>
 
     <p><strong>PHP/IOP/OP Office Protocols:</strong></p>
     <ul>
@@ -305,21 +305,14 @@
 				<a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
 			</div>
 		</div>
-		<!-- <div class="row center-xs">
-            <div class="col-xs-12 col-sm-4">
-                <a href="#l" target="_blank" rel="noopener">
-                    <img src="" alt="LegitScript">
-                </a>
-            </div>
-		</div> -->
-        <br>
-        <br>
-        <div class="row center-xs middle-xs">
-			<div class="col-xs-4">
+        <div class="row center-xs bottom-xs">
+			<div class="col-xs-4 first-sm">
 				<a href="/">&copy; Flatirons Recovery</a>
 			</div>
-			<div class="col-xs-4">
-                <!-- <object width="150px" type="image/svg+xml" data="">Flatirons Recovery Logo</object> -->
+			<div class="col-xs-12 col-sm-4 first-xs">
+                <div class="legit">
+                    <script src="https://static.legitscript.com/seals/7418467.js"></script>
+                </div>
 			</div>
 			<div class="col-xs-4">
 				<a href="https://arcdev.io/" rel="noopener">Arc i/o</a>
