sex addiction blog post

--- a/dst/drug-landing/index.html
+++ b/dst/drug-landing/index.html
@@ -15,7 +15,7 @@
     </script>
 
     <title>
-        Alcohol Addiction Recovery | Flatirons Recovery
+        Drug Addiction Recovery | Flatirons Recovery
     </title>
 
     <meta charset="utf-8">
@@ -115,7 +115,7 @@
         
 <style>
     .main {
-        background-image: url('/alcohol-landing/flatirons-hill.jpg');
+        background-image: url('/Drug-landing/flatirons-hill.jpg');
     }
     .ps {
             font-size: 1rem;
@@ -133,8 +133,8 @@
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>ALCOHOL ADDICTION RECOVERY</h1>
-            <h3>get help with alcohol addiction treatment today</h3>
+            <h1>DRUG ADDICTION RECOVERY</h1>
+            <h3>get help with Drug addiction treatment today</h3>
         </div>
     </div>
 </div>
@@ -250,6 +250,7 @@
 </div>
 
 </div>
+
 
 <div class="row">
     <div class="col-xs-12 col-sm half-bg"
