--- a/landing-page/drug-landing/index.v.html
+++ b/landing-page/drug-landing/index.v.html
@@ -2,11 +2,11 @@
     "title": "Drug Addiction Recovery | Flatirons Recovery",
     "description": "Drug Addiction and Drug Use Disorder. How our Flatirons Recovery Drug treatment program works. Get help with Drug addiction treatment today.",
     "keywords": "Drug addiction, Drug use disorder, colorado Drug addiction",
-    "ogImage": "/admission/flatirons-hill.jpg"
+    "ogImage": "/assets/images/cover.jpg"
 } -->
 <style>
     .main {
-        background-image: url('/Drug-landing/flatirons-hill.jpg');
+        background-image: url('/assets/images/cover.jpg');
     }
     .ps {
             font-size: 1rem;
@@ -35,11 +35,11 @@
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    <h2>Our Alcohol Addiction Program</h2>
-                    <p>People who struggle with alcohol individuals are unique individuals and have vastly different experiences,
+                    <h2>Our Drug Addiction Program</h2>
+                    <p>People who struggle with drug addiction are unique individuals and have vastly different experiences,
                         personality
-                        traits, genes, sociocultural influences, educations, races, and ethnicities. While alcoholism can often seem like a
-                        hopeless and devastating disease, many people who struggle with alcohol addiction make completely full recoveries –
+                        traits, genes, sociocultural influences, educations, races, and ethnicities. While drug addiction can often seem like a
+                        hopeless and devastating disease, many people who struggle with drug addiction make completely full recoveries –
                         no
                         matter if they’ve been to treatment one time or 20 times.</p>
                     
@@ -57,9 +57,8 @@
             <div class="row">
                 <div class="col-xs">
                     <a class="button blue" href="/treatment/modalities">Therapy Program</a>
-                    <a class="button green" href="/blog/mindfulness-exercises-to-support-early-addiction-recovery">mindfulness
-                        training</a>
-                    <a class="button black" href="/addiction/alcohol">Alcohol Addiction</a>
+                    <a class="button green" href="/blog/mindfulness-exercises-to-support-early-addiction-recovery">mindfulness</a>
+                    <a class="button black" href="/addiction">Addiction We Treat</a>
                 </div>
             </div>
         </div>
@@ -92,33 +91,77 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <h2>Is your loved one is using alcohol problematically?</h2>
+            <h2>Is your loved one is using drugs problematically?</h2>
             <h4>The following criteria come from the current Diagnostic and Statistical Manual (DSM) released by the American
             Psychiatric Association in 2013:</h4>
         </div>
     </div>
     <div class="row">
         <ul class="col-xs">
-            <li>Alcohol is taken in larger amounts or over a longer period of time than was intended.</li>
-            <li>A persistent desire or unsuccessful efforts to cut down or control alcohol use.</li>
-            <li>A great deal of time is spent in activities, necessary to obtain alcohol, use alcohol, or recover from its effects.
-            </li>
-            <li>Craving or a strong desire or urge to use alcohol.</li>
-            <li>Recurrent alcohol use resulting in a failure to fulfill major role obligations at work, school or home.</li>
-            <li>Continued alcohol use despite having persistent or recurrent social or interpersonal problems caused or exacerbated
-                by the effects of alcohol.</li>
+            <li>Drugs are taken in larger amounts or over a longer period of time than was intended.</li>
+            <li>A persistent desire or unsuccessful efforts to cut down or control drug use.</li>
+            <li>A great deal of time is spent in activities, necessary to obtain drugs, use drugs, or recover from its effects.</li>
+            <li>Craving or a strong desire or urge to use drugs.</li>
+            <li>Recurrent drug use resulting in a failure to fulfill major role obligations at work, school or home.</li>
+            <li>Continued drug use despite having persistent or recurrent social or interpersonal problems caused or exacerbated
+                by the effects of drugs.</li>
         </ul>
 
         <ul class="col-xs">
-            <li>Recurrent alcohol use in situations in which it is physically hazardous.</li>
-            <li>Alcohol use is continued despite knowledge of having persistent or recurrent physical or psychological problems that
-                likely to have been caused or exacerbated by alcohol.</li>
-            <li>Physical or psychological issues that are likely to have been caused or exacerbated by alcohol use.</li>
-            <li>High tolerance for alcohol use.</li>
-            <li>Withdrawal symptoms experienced without using alcohol.</li>
-            <li>If you or a loved one’s alcohol use meet at least two of these criteria in the past 12 months, then you may be
+            <li>Recurrent drug use in situations in which it is physically hazardous.</li>
+            <li>Drug use is continued despite knowledge of having persistent or recurrent physical or psychological problems that
+                likely to have been caused or exacerbated by drugs.</li>
+            <li>Physical or psychological issues that are likely to have been caused or exacerbated by drug use.</li>
+            <li>High tolerance for drug use.</li>
+            <li>Withdrawal symptoms experienced without using drugs.</li>
+            <li>If you or a loved one’s drug use meet at least two of these criteria in the past 12 months, then you may be
                 suffering from a substance use disorder requiring treatment.</li>
         </ul>
+    </div>
+    <div class="row center-xs">
+        <h2>More Informtaion on Drug Addiction</h2>
+    </div>
+    <div class="row center-xs">
+        <div class="col-xs-12 col-sm-6">
+            <div class="blue tile">
+                <h3>Heroin</h3>
+                <p>Over the past 15 years, heroin and opiate use has become an epidemic of significant proportions in the United States,
+                impacting communities from nearly every socioeconomic category in tragic ways. Learn more about the effects of cocaine use and addiction.
+                </p>
+                <a class="button border" href="/addiction/heroin">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6">
+            <div class="blue tile">
+                <h3>Methamphetamine</h3>
+                <p>Meth has entered into the public consciousness in new ways recently though popular television shows such as Breaking
+                Bad, however in reality meth has been impacting communities across the United State for decades. Learn more about the effects of methamphetamine use and addiction.</p>
+                <a class="button border" href="/addiction/methamphetamine">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <div class="blue tile">
+                <h3>Cocaine</h3>
+                <p>Treatment for Cocaine Use Disorder/ Addiction at Flatirons Recovery and more about our addiction treatment program. Learn more about the effects of cocaine use and addiction.</p>
+                <a class="button border" href="/addiction/cocaine">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <div class="blue tile">
+                <h3>Marijuana</h3>
+                <p>Such high potency marijuana, along with the various ways in which it is now available in edible form, makes the
+                potential for problematic use of cannabis an ever growing issue for many communities of people. Learn more about the effects of marijuana use and addiction.</p>
+                <a class="button border" href="/addiction/marijuana">Learn More</a>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <div class="blue tile">
+                <h3>Prescription Medication</h3>
+                <p>One of the steepest barriers to people entering treatment for prescription medications is the belief that if a medical
+                doctor has prescribed it, that it cannot be harmful. Learn more about the effects of prescription medications use and addiction.</p>
+                <a class="button border" href="/addiction/prescription-medication">Learn More</a>
+            </div>
+        </div>
     </div>
 </div>
 
