--- a/dst/drug-landing/index.html
+++ b/dst/drug-landing/index.html
@@ -21,15 +21,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Drug Addiction and Drug Use Disorder. How our Flatirons Recovery Drug treatment program works. Get help with Drug addiction treatment today.">
+    <meta name="keywords" content="Drug addiction, Drug use disorder, colorado Drug addiction">
 
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Flatirons Recovery">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="" />
+    <meta property="og:title" content="Drug Addiction Recovery | Flatirons Recovery">
+    <meta property="og:description" content="Drug Addiction and Drug Use Disorder. How our Flatirons Recovery Drug treatment program works. Get help with Drug addiction treatment today.">
+    <meta property="og:image" content="/assets/images/cover.jpg" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
@@ -78,13 +78,13 @@
 
         <div class="row middle-xs">
             <div class="col-xs-6 start-xs">
-                <a href="/">
+                <a href="/" aria-label="Home">
                     <object class="logo-holo" data="/assets/logo-holo.svg" type="image/svg+xml">flatirons recovery logo
                         holo</object>
                 </a>
             </div>
             <div class="col-xs-6 end-xs">
-                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click">
+                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click" aria-label="Call">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
                         <mask id="mask">
                             <rect width="100%" height="100%" fill="white" />
@@ -237,7 +237,7 @@
                 <p>Over the past 15 years, heroin and opiate use has become an epidemic of significant proportions in the United States,
                 impacting communities from nearly every socioeconomic category in tragic ways. Learn more about the effects of cocaine use and addiction.
                 </p>
-                <a class="button border" href="/addiction/heroin">Learn More</a>
+                <a class="button border" href="/addiction/heroin" aria-label="heroin addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -245,14 +245,14 @@
                 <h3>Methamphetamine</h3>
                 <p>Meth has entered into the public consciousness in new ways recently though popular television shows such as Breaking
                 Bad, however in reality meth has been impacting communities across the United State for decades. Learn more about the effects of methamphetamine use and addiction.</p>
-                <a class="button border" href="/addiction/methamphetamine">Learn More</a>
+                <a class="button border" href="/addiction/methamphetamine" aria-label="methamphetamine addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
             <div class="blue tile">
                 <h3>Cocaine</h3>
                 <p>Treatment for Cocaine Use Disorder/ Addiction at Flatirons Recovery and more about our addiction treatment program. Learn more about the effects of cocaine use and addiction.</p>
-                <a class="button border" href="/addiction/cocaine">Learn More</a>
+                <a class="button border" href="/addiction/cocaine" aria-label="cocaine addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -260,7 +260,7 @@
                 <h3>Marijuana</h3>
                 <p>Such high potency marijuana, along with the various ways in which it is now available in edible form, makes the
                 potential for problematic use of cannabis an ever growing issue for many communities of people. Learn more about the effects of marijuana use and addiction.</p>
-                <a class="button border" href="/addiction/marijuana">Learn More</a>
+                <a class="button border" href="/addiction/marijuana" aria-label="marijuana addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -268,7 +268,7 @@
                 <h3>Prescription Medication</h3>
                 <p>One of the steepest barriers to people entering treatment for prescription medications is the belief that if a medical
                 doctor has prescribed it, that it cannot be harmful. Learn more about the effects of prescription medications use and addiction.</p>
-                <a class="button border" href="/addiction/prescription-medication">Learn More</a>
+                <a class="button border" href="/addiction/prescription-medication" aria-label="prescription medication addiction information">Learn More</a>
             </div>
         </div>
     </div>
@@ -321,7 +321,7 @@
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
             </div>
             <div class="row">
-                <a class="button border" href="/sober-living">Learn More</a>
+                <a class="button border" href="/sober-living">Sober Living</a>
                 <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
             </div>
         </div>
@@ -357,17 +357,17 @@
                 <h3>Follow</h3>
                 <br>
                 <a class="badge" href="https://www.facebook.com/Flatirons-Recovery-628637104427552/" target="_blank"
-                    rel="noopener">
+                    rel="noopener" aria-label="Facebook">
                     <object data="/assets/f.svg" type="image/svg+xml">Facebook Logo</object>
                 </a>
-                <a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener">
+                <a class="badge" href="https://twitter.com/flatironscenter" target="_blank" rel="noopener" aria-label="Twitter">
                     <object data="/assets/t.svg" type="image/svg+xml">Twitter Logo</object>
                 </a>
-                <a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener">
+                <a class="badge" href="https://www.instagram.com/flatironsrecovery/" target="_blank" rel="noopener" aria-label="Instagram">
                     <object data="/assets/i.svg" type="image/svg+xml">Instagram Logo</object>
                 </a>
                 <a class="badge" href="https://www.linkedin.com/company/flatirons-recovery" target="_blank"
-                    rel="noopener">
+                    rel="noopener" aria-label="Linkedin">
                     <object data="/assets/l.svg" type="image/svg+xml">Linkedin Logo</object>
                 </a>
             </div>
