--- a/landing-page/drug-landing/index.v.html
+++ b/landing-page/drug-landing/index.v.html
@@ -128,7 +128,7 @@
                 <p>Over the past 15 years, heroin and opiate use has become an epidemic of significant proportions in the United States,
                 impacting communities from nearly every socioeconomic category in tragic ways. Learn more about the effects of cocaine use and addiction.
                 </p>
-                <a class="button border" href="/addiction/heroin">Learn More</a>
+                <a class="button border" href="/addiction/heroin" aria-label="heroin addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6">
@@ -136,14 +136,14 @@
                 <h3>Methamphetamine</h3>
                 <p>Meth has entered into the public consciousness in new ways recently though popular television shows such as Breaking
                 Bad, however in reality meth has been impacting communities across the United State for decades. Learn more about the effects of methamphetamine use and addiction.</p>
-                <a class="button border" href="/addiction/methamphetamine">Learn More</a>
+                <a class="button border" href="/addiction/methamphetamine" aria-label="methamphetamine addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
             <div class="blue tile">
                 <h3>Cocaine</h3>
                 <p>Treatment for Cocaine Use Disorder/ Addiction at Flatirons Recovery and more about our addiction treatment program. Learn more about the effects of cocaine use and addiction.</p>
-                <a class="button border" href="/addiction/cocaine">Learn More</a>
+                <a class="button border" href="/addiction/cocaine" aria-label="cocaine addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -151,7 +151,7 @@
                 <h3>Marijuana</h3>
                 <p>Such high potency marijuana, along with the various ways in which it is now available in edible form, makes the
                 potential for problematic use of cannabis an ever growing issue for many communities of people. Learn more about the effects of marijuana use and addiction.</p>
-                <a class="button border" href="/addiction/marijuana">Learn More</a>
+                <a class="button border" href="/addiction/marijuana" aria-label="marijuana addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
@@ -159,7 +159,7 @@
                 <h3>Prescription Medication</h3>
                 <p>One of the steepest barriers to people entering treatment for prescription medications is the belief that if a medical
                 doctor has prescribed it, that it cannot be harmful. Learn more about the effects of prescription medications use and addiction.</p>
-                <a class="button border" href="/addiction/prescription-medication">Learn More</a>
+                <a class="button border" href="/addiction/prescription-medication" aria-label="prescription medication addiction information">Learn More</a>
             </div>
         </div>
     </div>
@@ -196,7 +196,7 @@
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
             </div>
             <div class="row">
-                <a class="button border" href="/sober-living">Learn More</a>
+                <a class="button border" href="/sober-living">Sober Living</a>
                 <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
             </div>
         </div>
