--- a/landing/drug-landing/index.v.html
+++ b/landing/drug-landing/index.v.html
@@ -4,6 +4,7 @@
     "keywords": "Drug addiction, Drug use disorder, colorado Drug addiction",
     "ogImage": "/assets/images/cover.jpg"
 } -->
+
 <style>
     .main {
         background-image: url('/assets/images/cover.jpg');
@@ -19,7 +20,6 @@
         margin: 0.5rem;
     }
 </style>
-<script src="/assets/gallery.min.js"></script>
 
 <div class="main">
     <div class="gradient">
@@ -36,22 +36,9 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h2>Our Drug Addiction Program</h2>
-                    <p>People who struggle with drug addiction are unique individuals and have vastly different experiences,
-                        personality
-                        traits, genes, sociocultural influences, educations, races, and ethnicities. While drug addiction can often seem like a
-                        hopeless and devastating disease, many people who struggle with drug addiction make completely full recoveries –
-                        no
-                        matter if they’ve been to treatment one time or 20 times.</p>
-                    
-                    <p>At Flatirons Recovery, we emphasize and utilize a variety of evidence-based therapeutic approaches – including
-                        cognitive-behavioral therapies and other forms of therapy that involve physiological training in anxiety reduction
-                        and
-                        increased impulse control (which can lead to enhanced decision-making skills); psychological and behavioral
-                        strategies
-                        to practice interpersonal communication skills and develop the ability to tolerate distressing situations; and, of
-                        course, mindfulness training, which is a neuroscientifically-based modality being used to address conditions ranging
-                        from addiction to chronic pain to cancer.</p>
-                        <h3>Learn More</h3>
+                    <p>People who struggle with drug addiction are unique individuals and have vastly different experiences, personality traits, genes, sociocultural influences, educations, races, and ethnicities. While drug addiction can often seem like a hopeless and devastating disease, many people who struggle with drug addiction make completely full recoveries – no matter if they’ve been to treatment one time or 20 times.</p>
+                    <p>At Flatirons Recovery, we emphasize and utilize a variety of evidence-based therapeutic approaches – including cognitive-behavioral therapies and other forms of therapy that involve physiological training in anxiety reduction and increased impulse control (which can lead to enhanced decision-making skills); psychological and behavioral strategies to practice interpersonal communication skills and develop the ability to tolerate distressing situations; and, of course, mindfulness training, which is a neuroscientifically-based modality being used to address conditions ranging from addiction to chronic pain to cancer.</p>
+                    <h3>Learn More</h3>
                 </div>
             </div>
             <div class="row">
@@ -68,7 +55,6 @@
 
 <div class="blue">
     <div class="wrap">
-
         <div class="row">
             <div class="col-xs-12 col-sm">
                 <h2>WE ACCEPT MOST INSURANCE</h2>
@@ -78,10 +64,8 @@
             <div class="col-xs-12 col-sm">
                 <h3>By phone:</h3>
                 <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
-
                 <h3>By online form:</h3>
                 <a class="button yellow" href="/admission#verify-insurance">verify your insurance</a>
-
                 <div class="ps">*All information submitted to us is completely confidential. See our HIPPA Confidentiality Policy.</div>
             </div>
         </div>
@@ -92,8 +76,7 @@
     <div class="row">
         <div class="col-xs">
             <h2>Is your loved one is using drugs problematically?</h2>
-            <h4>The following criteria come from the current Diagnostic and Statistical Manual (DSM) released by the American
-            Psychiatric Association in 2013:</h4>
+            <h4>The following criteria come from the current Diagnostic and Statistical Manual (DSM) released by the American Psychiatric Association in 2013:</h4>
         </div>
     </div>
     <div class="row">
@@ -103,39 +86,32 @@
             <li>A great deal of time is spent in activities, necessary to obtain drugs, use drugs, or recover from its effects.</li>
             <li>Craving or a strong desire or urge to use drugs.</li>
             <li>Recurrent drug use resulting in a failure to fulfill major role obligations at work, school or home.</li>
-            <li>Continued drug use despite having persistent or recurrent social or interpersonal problems caused or exacerbated
-                by the effects of drugs.</li>
+            <li>Continued drug use despite having persistent or recurrent social or interpersonal problems caused or exacerbated by the effects of drugs.</li>
         </ul>
-
         <ul class="col-xs">
             <li>Recurrent drug use in situations in which it is physically hazardous.</li>
-            <li>Drug use is continued despite knowledge of having persistent or recurrent physical or psychological problems that
-                likely to have been caused or exacerbated by drugs.</li>
+            <li>Drug use is continued despite knowledge of having persistent or recurrent physical or psychological problems that likely to have been caused or exacerbated by drugs.</li>
             <li>Physical or psychological issues that are likely to have been caused or exacerbated by drug use.</li>
             <li>High tolerance for drug use.</li>
             <li>Withdrawal symptoms experienced without using drugs.</li>
-            <li>If you or a loved one’s drug use meet at least two of these criteria in the past 12 months, then you may be
-                suffering from a substance use disorder requiring treatment.</li>
+            <li>If you or a loved one’s drug use meet at least two of these criteria in the past 12 months, then you may be suffering from a substance use disorder requiring treatment.</li>
         </ul>
     </div>
     <div class="row center-xs">
-        <h2>More Informtaion on Drug Addiction</h2>
+        <h2>More Information on Drug Addiction</h2>
     </div>
     <div class="row center-xs">
         <div class="col-xs-12 col-sm-6">
             <div class="blue tile">
                 <h3>Heroin</h3>
-                <p>Over the past 15 years, heroin and opiate use has become an epidemic of significant proportions in the United States,
-                impacting communities from nearly every socioeconomic category in tragic ways. Learn more about the effects of cocaine use and addiction.
-                </p>
+                <p>Over the past 15 years, heroin and opiate use has become an epidemic of significant proportions in the United States, impacting communities from nearly every socioeconomic category in tragic ways. Learn more about the effects of cocaine use and addiction.</p>
                 <a class="button border" href="/addiction/heroin" aria-label="heroin addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6">
             <div class="blue tile">
                 <h3>Methamphetamine</h3>
-                <p>Meth has entered into the public consciousness in new ways recently though popular television shows such as Breaking
-                Bad, however in reality meth has been impacting communities across the United State for decades. Learn more about the effects of methamphetamine use and addiction.</p>
+                <p>Meth has entered into the public consciousness in new ways recently though popular television shows such as Breaking Bad, however in reality meth has been impacting communities across the United State for decades. Learn more about the effects of methamphetamine use and addiction.</p>
                 <a class="button border" href="/addiction/methamphetamine" aria-label="methamphetamine addiction information">Learn More</a>
             </div>
         </div>
@@ -149,16 +125,14 @@
         <div class="col-xs-12 col-sm-4">
             <div class="blue tile">
                 <h3>Marijuana</h3>
-                <p>Such high potency marijuana, along with the various ways in which it is now available in edible form, makes the
-                potential for problematic use of cannabis an ever growing issue for many communities of people. Learn more about the effects of marijuana use and addiction.</p>
+                <p>Such high potency marijuana, along with the various ways in which it is now available in edible form, makes the potential for problematic use of cannabis an ever growing issue for many communities of people. Learn more about the effects of marijuana use and addiction.</p>
                 <a class="button border" href="/addiction/marijuana" aria-label="marijuana addiction information">Learn More</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-4">
             <div class="blue tile">
                 <h3>Prescription Medication</h3>
-                <p>One of the steepest barriers to people entering treatment for prescription medications is the belief that if a medical
-                doctor has prescribed it, that it cannot be harmful. Learn more about the effects of prescription medications use and addiction.</p>
+                <p>One of the steepest barriers to people entering treatment for prescription medications is the belief that if a medical doctor has prescribed it, that it cannot be harmful. Learn more about the effects of prescription medications use and addiction.</p>
                 <a class="button border" href="/addiction/prescription-medication" aria-label="prescription medication addiction information">Learn More</a>
             </div>
         </div>
@@ -169,7 +143,6 @@
     <!-- { "partial": "../src/partials/call-to-action-1.p.html" } -->
 </div>
 
-
 <div class="row">
     <div class="col-xs-12 col-sm half-bg"
         style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
@@ -178,22 +151,23 @@
             <div class="row">
                 <div class="col-xs">
                     <h2>Our Sober Living Center</h2>
-                    <p>Those struggling with alcohol addiction often spend a great deal of time drinking alcohol in their home
-                        environments.</p>
-                    <p>For those considering engaging in treatment while continuing to live at home, this poses significant
-                        challenges for maintaining sobriety. Our sober living facilities emphasize our belief that active connection
-                        to community is a foundational aspect of long-term recovery. As such, clients in our sober living are
-                        encouraged to take on mentoring roles with new peers, as well as to begin involvement in community-based
-                        recovery programs such as 12-step and SMART Recovery.</p>
+                    <p>Those struggling with alcohol addiction often spend a great deal of time drinking alcohol in their home environments.</p>
+                    <p>For those considering engaging in treatment while continuing to live at home, this poses significant challenges for maintaining sobriety. Our sober living facilities emphasize our belief that active connection to community is a foundational aspect of long-term recovery. As such, clients in our sober living are encouraged to take on mentoring roles with new peers, as well as to begin involvement in community-based recovery programs such as 12-step and SMART Recovery.</p>
                 </div>
             </div>
             <div class="gallery row">
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt=""></div>
-                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt=""></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4">
+                    <img
+                        src="/sober-living/images/sober_living_0607.jpg"
+                        srcset="/sober-living/images/sober_living_0605-200.jpg 200w, /sober-living/images/sober_living_0607.jpg 1024w"
+                        sizes="50vw"
+                        alt="Sober living house interior 1">
+                </div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt="Sober living house interior 2"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt="Sober living house interior 3"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt="Sober living house interior 4"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt="Sober living house interior 5"></div>
+                <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt="Sober living house interior 6"></div>
             </div>
             <div class="row">
                 <a class="button border" href="/sober-living">Sober Living</a>
@@ -207,8 +181,11 @@
     <!-- { "partial": "../src/partials/call-to-action-faq.p.html" } -->
 </div>
 
+<script src="/assets/gallery.min.js" defer></script>
 <script>
-    var gallery = document.querySelector('.gallery');
-
-    erbium.gallery.create({ target: gallery });
+    document.addEventListener('DOMContentLoaded', function () {
+        var gallery = document.querySelector('.gallery');
+        window.erbium.gallery.create({ target: gallery });
+    })
 </script>
+
