landing page optimizations

--- a/landing/drug-landing/index.v.html
+++ b/landing/drug-landing/index.v.html
@@ -157,11 +157,7 @@
             </div>
             <div class="gallery row">
                 <div class="item col-xs-12 col-sm-6 col-md-4">
-                    <img
-                        src="/sober-living/images/sober_living_0607.jpg"
-                        srcset="/sober-living/images/sober_living_0605-200.jpg 200w, /sober-living/images/sober_living_0607.jpg 1024w"
-                        sizes="50vw"
-                        alt="Sober living house interior 1">
+                    <img src="/sober-living/images/sober_living_0607.jpg" alt="Sober living house interior 1">
                 </div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt="Sober living house interior 2"></div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt="Sober living house interior 3"></div>
