--- a/landing/drug-landing/index.v.html
+++ b/landing/drug-landing/index.v.html
@@ -9,13 +9,15 @@
     .main {
         background-image: url('/assets/images/cover.jpg');
     }
+
     .ps {
-            font-size: 1rem;
-            line-height: 1.6rem;
-            margin: 0.5rem;
-            padding: 0.5rem;
-            font-weight: 500;
+        font-size: 1rem;
+        line-height: 1.6rem;
+        margin: 0.5rem;
+        padding: 0.5rem;
+        font-weight: 500;
     }
+
     .button {
         margin: 0.5rem;
     }
@@ -63,7 +65,7 @@
             </div>
             <div class="col-xs-12 col-sm">
                 <h3>By phone:</h3>
-                <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
+                <a class="button yellow" href="tel:303-578-4536">Call Now: 303-578-4536</a>
                 <h3>By online form:</h3>
                 <a class="button yellow" href="/admission#verify-insurance">verify your insurance</a>
                 <div class="ps">*All information submitted to us is completely confidential. See our HIPPA Confidentiality Policy.</div>
@@ -144,8 +146,7 @@
 </div>
 
 <div class="row">
-    <div class="col-xs-12 col-sm half-bg"
-        style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
+    <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
     <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
@@ -167,7 +168,7 @@
             </div>
             <div class="row">
                 <a class="button border" href="/sober-living">Sober Living</a>
-                <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
+                <a class="button yellow" href="tel:303-578-4536">Call Now: 303-578-4536</a>
             </div>
         </div>
     </div>
@@ -184,4 +185,3 @@
         window.erbium.gallery.create({ target: gallery });
     })
 </script>
-
